# nano-p4-tutorial

./: .gitignore  LICENSE  Makefile  README.md  book.toml  dprint.json  flake.nix
mdbook-p4-highlight/: Cargo.toml  build.rs  highlights.scm  parser.c
mdbook-p4-highlight/src/: main.rs
mdbook-spectec-highlight/: Cargo.toml  build.rs  highlights.scm  parser.c
mdbook-spectec-highlight/src/: main.rs
src/: SUMMARY.md  chapter_1.md  overview.md
src/nano-p4/: README.md  grammar.md  nano-switch.md  scope.md  syntax.md  test-suite.md
src/spectec/: README.md  basics.md  commands.md  execution-model.md  installation.md  stdlib.md  workflow.md
src/static/: README.md  expressions-lvalues.md  statements.md  types.md  typing-context.md
theme/: catppuccin.css  p4.css  spectec.css
